# fastQT6

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: PYCHARM_TUTORIAL.md  PYPI.md
examples/basic_app/: main.py
examples/sportshop/: main.py
src/fastqt6/: __init__.py  cli.py  db.py  designer.py  exam.py  fields.py  forms.py  scaffold.py  tutorial.py  widgets.py
src/fastqt6/docs/: DEMO_EXAM_OBUV.md  PYCHARM_TUTORIAL.md
src/fastqt6/templates/demo_28/: README.md
src/fastqt6/templates/demo_exam_obuv/: .gitignore  README.md
src/fastqt6/templates/demo_exam_obuv/docs/: ALGORITHM.md  ER_DIAGRAM.md  SCREENSHOTS_CHECKLIST.md
src/fastqt6/templates/demo_exam_obuv/sql/: shoes.sql
src/fastqt6/templates/demo_exam_obuv/src/: db.py  main.py
src/fastqt6/templates/demo_exam_obuv/src/widgets/: Auth.py  ItemDialog.py  ItemOrderWidget.py  ItemWidget.py  MainWindow.py  OrderDialog.py
src/fastqt6/templates/demo_exam_obuv/ui/: Auth.ui  ItemDialog.ui  ItemOrderWidget.ui  ItemWidget.ui  MainWidget.ui  OrderDialog.ui
